--- a/manifest.json
+++ b/manifest.json
@@ -25,7 +25,7 @@
   "action": {
     "default_title": "Passive Language Learning",
     "default_icon": "icon.png",
-    "default_popup": "popup.html"
+    "default_popup": "popup/popup.html"
   },
 
   "icons": {
