--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,11 @@
     "type": "module"
   },
 
+  "web_accessible_resources": [{
+    "resources": ["webpage.bundle.js"],
+    "matches": ["<all_urls>"]
+  }],
+
   "content_scripts": [{
     "matches": [
       "<all_urls>"
