--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
     "start": "gulp"
   },
   "devDependencies": {
+    "babel-loader": "^9.1.3",
     "babelify": "^10.0.0",
     "browserify": "^17.0.0",
     "del": "^6.1.1",
+    "eslint": "^8.55.0",
     "fs": "^0.0.1-security",
+    "glob": "^10.3.10",
     "gulp": "^4.0.2",
     "gulp-cssnano": "^2.1.3",
     "gulp-htmlmin": "^5.0.1",
@@ -19,9 +22,11 @@
     "gulp-svgmin": "^4.1.0",
     "gulp-terser": "^2.1.0",
     "gulp-uglify": "^3.0.2",
+    "mini-css-extract-plugin": "^2.7.6",
     "node-fetch": "^3.3.2",
     "path": "^0.12.7",
     "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0"
+    "vinyl-source-stream": "^2.0.0",
+    "webpack-stream": "^7.0.0"
   }
 }
