--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "gulp"
   },
   "devDependencies": {
+    "abstract-syntax-tree": "^2.21.1",
     "babel-loader": "^9.1.3",
     "babelify": "^10.0.0",
     "browserify": "^17.0.0",
